# AirQualityMonitor

./: README.md  partitions.csv  pytest_rgb_panel_lvgl.py  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3
components/esp_idf_lib_helpers/: .eil.yml
components/i2cdev/: .eil.yml  CMakeLists.txt  Kconfig  component.mk  i2cdev.c  i2cdev.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/Sensor/: AirQuality.c  AirQuality.h
main/ui/components/: ui_comp_hook.c
main/ui/images/: ui_img_vocindex_png.c
main/ui/screens/: ui_Screen1.c  ui_Screen2.c
